--- a/frontend/babel.config.json
+++ b/frontend/babel.config.json
@@ -9,6 +9,10 @@
         }
       ],
       "@babel/preset-react"
+      
     ],
-    "plugins": ["@babel/plugin-proposal-class-properties"]
+    "plugins": ["@babel/plugin-proposal-class-properties",
+      "@babel/plugin-transform-runtime",
+      "@babel/plugin-syntax-dynamic-import",
+    ]
   }
