--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,8 +29,13 @@
     "@babel/plugin-transform-runtime": "^7.17.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
+    "bootstrap": "^5.1.3",
     "chart.js": "^3.7.1",
+    "chartjs-plugin-datalabels": "^2.0.0",
+    "react-bootstrap": "^2.2.3",
     "react-chartjs-2": "^4.0.1",
-    "react-router-dom": "^6.2.2"
+    "react-inlinesvg": "^2.3.0",
+    "react-router-dom": "^6.2.2",
+    "svg-inline-loader": "^0.8.2"
   }
 }
