--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.2.4",
     "css-loader": "^6.7.1",
+    "file-loader": "^6.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "style-loader": "^3.3.1",
